<resources>
    <string name="app_name">文件管理器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--导航页面文字-->
    <string name="menu_home">首页</string>
    <string name="menu_storage">内部储存</string>
    <string name="menu_about">关于</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出应用</string>

    <!--首页文字-->
    <string name="movie">视频</string>
    <string name="music">音乐</string>
    <string name="photo">图片</string>
    <string name="apk">安装包</string>
    <string name="text">文档</string>
    <string name="zip">压缩包</string>
    <string name="favorite">收藏</string>
    <string name="download">下载</string>
    <string name="last_modified">最近修改</string>
    <string name="all_file">全部文件</string>
    <string name="about_me">关于作者</string>
    <string name="setting">设置</string>
    <string name="operate">操作</string>
    <string name="order">排序方式</string>
    <string name="done_all">标记全部</string>
    <string name="cancel_done_all">取消全标</string>
    <string name="delete">删除</string>
    <string name="order_a_z">名称(a-z)</string>
    <string name="order_old_new">时间(最旧-最新)</string>
    <string name="default_order">默认</string>
    <string name="rename">重命名</string>


    <!--关于邮箱地址-->
    <string name="author_email">邮箱：jokerxqg@outlook.com</string>

    <string name="not_file">无文件</string>

</resources>
