<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/menu_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_storage"
            android:icon="@mipmap/ic_storage_black_24dp"
            android:title="@string/menu_storage" />

    </group>

    <item android:title="@string/nav_title_advanced">


        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@mipmap/ic_view_compact_black_24dp"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/menu_setting"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/menu_exit"
                android:icon="@mipmap/ic_power_settings_new_black_24dp"
                android:title="@string/menu_exit" />

        </menu>
    </item>
</menu>